[gd_scene load_steps=14 format=2]

[ext_resource path="res://Creator/CreationScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Icons/PlanetIcon.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Icons/PaintBrushIcon.png" type="Texture" id=4]
[ext_resource path="res://Icons/ImageIcon.png" type="Texture" id=5]
[ext_resource path="res://Icons/GearIcon.png" type="Texture" id=6]
[ext_resource path="res://Icons/WaterIcon.png" type="Texture" id=7]
[ext_resource path="res://CustomNodes/DragContainer.tscn" type="PackedScene" id=8]
[ext_resource path="res://CustomNodes/PopupManager.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.211765, 0.211765, 0.211765, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Fonts/PTC55F.ttf"

[sub_resource type="DynamicFont" id=3]
size = 24
use_mipmaps = true
font_data = SubResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = null
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[node name="Spatial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creator" type="Control" parent="HBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportContainer" type="ViewportContainer" parent="HBoxContainer/Creator"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="HBoxContainer/Creator/ViewportContainer"]
size = Vector2( 1024, 600 )
handle_input_locally = false
msaa = 4
fxaa = true
debanding = true
render_target_update_mode = 3

[node name="Spatial" parent="HBoxContainer/Creator/ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Creator"]
anchor_right = 1.0
margin_bottom = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="HBoxContainer" parent="HBoxContainer/Creator/HBoxContainer"]
margin_right = 510.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WorldGenButton" type="TextureButton" parent="HBoxContainer/Creator/HBoxContainer/Left"]
margin_right = 74.0
margin_bottom = 74.0
rect_min_size = Vector2( 74, 0 )
hint_tooltip = "World Generation Properties"
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="LandPaintButton" type="TextureButton" parent="HBoxContainer/Creator/HBoxContainer/Left"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 74.0
rect_min_size = Vector2( 74, 0 )
hint_tooltip = "Biome Color Properties"
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="OceanPaintButton" type="TextureButton" parent="HBoxContainer/Creator/HBoxContainer/Left"]
margin_left = 156.0
margin_right = 230.0
margin_bottom = 74.0
rect_min_size = Vector2( 74, 0 )
hint_tooltip = "Lighting Properties"
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Right" type="HBoxContainer" parent="HBoxContainer/Creator/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="SpriteExport" type="TextureButton" parent="HBoxContainer/Creator/HBoxContainer/Right"]
margin_left = 358.0
margin_right = 432.0
margin_bottom = 74.0
rect_min_size = Vector2( 74, 0 )
hint_tooltip = "Export as Sprite"
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Settings" type="TextureButton" parent="HBoxContainer/Creator/HBoxContainer/Right"]
margin_left = 436.0
margin_right = 510.0
margin_bottom = 74.0
rect_min_size = Vector2( 74, 0 )
hint_tooltip = "Settings"
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Popups" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldGenProperties" parent="Popups" instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -352.0
margin_top = 96.0
margin_right = -16.0
margin_bottom = 596.0
window_title = "World Gen"

[node name="WindowGrabber" parent="Popups/WorldGenProperties/Panel/VBoxContainer" index="0"]
margin_right = 336.0
margin_bottom = 34.0

[node name="LandBiomeColors" parent="Popups" instance=ExtResource( 8 )]
margin_left = 16.0
margin_top = 96.0
margin_right = 352.0
margin_bottom = 596.0
window_title = "Land Colors"

[node name="WindowGrabber" parent="Popups/LandBiomeColors/Panel/VBoxContainer" index="0"]
margin_right = 336.0
margin_bottom = 34.0

[node name="ScrollContainer" type="ScrollContainer" parent="Popups/LandBiomeColors/Panel/VBoxContainer" index="1"]
margin_top = 38.0
margin_right = 336.0
margin_bottom = 500.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorButtons" type="VBoxContainer" parent="Popups/LandBiomeColors/Panel/VBoxContainer/ScrollContainer"]
margin_right = 336.0
margin_bottom = 462.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OceanBiomeColors" parent="Popups" instance=ExtResource( 8 )]
margin_left = 352.0
margin_top = 96.0
margin_right = 688.0
margin_bottom = 596.0
window_title = "Ocean Colors"

[node name="WindowGrabber" parent="Popups/OceanBiomeColors/Panel/VBoxContainer" index="0"]
margin_right = 336.0
margin_bottom = 34.0

[node name="ScrollContainer" type="ScrollContainer" parent="Popups/OceanBiomeColors/Panel/VBoxContainer" index="1"]
margin_top = 38.0
margin_right = 336.0
margin_bottom = 500.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorButtons" type="VBoxContainer" parent="Popups/OceanBiomeColors/Panel/VBoxContainer/ScrollContainer"]
margin_right = 336.0
margin_bottom = 462.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings" parent="Popups" instance=ExtResource( 8 )]
margin_left = 352.0
margin_top = 96.0
margin_right = 688.0
margin_bottom = 596.0
window_title = "Settings"

[node name="WindowGrabber" parent="Popups/Settings/Panel/VBoxContainer" index="0"]
margin_right = 336.0
margin_bottom = 34.0

[node name="ScrollContainer" type="ScrollContainer" parent="Popups/Settings/Panel/VBoxContainer" index="1"]
margin_top = 38.0
margin_right = 336.0
margin_bottom = 500.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorButtons" type="VBoxContainer" parent="Popups/Settings/Panel/VBoxContainer/ScrollContainer"]
margin_right = 336.0
margin_bottom = 462.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Popups/Settings/Panel/VBoxContainer/ScrollContainer/ColorButtons"]
margin_right = 336.0
margin_bottom = 32.0
text = "Spin"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="Popups/Settings/Panel/VBoxContainer/ScrollContainer/ColorButtons"]
margin_top = 36.0
margin_right = 336.0
margin_bottom = 40.0

[node name="Spin" type="VBoxContainer" parent="Popups/Settings/Panel/VBoxContainer/ScrollContainer/ColorButtons"]
margin_top = 44.0
margin_right = 336.0
margin_bottom = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Popups/Settings/Panel/VBoxContainer/ScrollContainer/ColorButtons/Spin"]
margin_right = 336.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
pressed = true
text = "Spinning"
align = 1

[node name="SpinBox" type="SpinBox" parent="Popups/Settings/Panel/VBoxContainer/ScrollContainer/ColorButtons/Spin"]
margin_top = 38.0
margin_right = 336.0
margin_bottom = 80.0
min_value = 2.0
step = 0.1
value = 2.0
prefix = "Speed"

[connection signal="pressed" from="HBoxContainer/Creator/HBoxContainer/Left/WorldGenButton" to="." method="_on_WorldGenButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Creator/HBoxContainer/Left/LandPaintButton" to="." method="_on_LandPaintButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Creator/HBoxContainer/Left/OceanPaintButton" to="." method="_on_OceanPaintButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Creator/HBoxContainer/Right/Settings" to="." method="_on_Settings_pressed"]
[connection signal="window_selected" from="Popups/WorldGenProperties" to="Popups" method="_on_WorldGenProperties_window_selected"]
[connection signal="window_selected" from="Popups/LandBiomeColors" to="Popups" method="_on_BiomeColors_window_selected"]
[connection signal="window_selected" from="Popups/OceanBiomeColors" to="Popups" method="_on_OceanBiomeColors_window_selected"]
[connection signal="toggled" from="Popups/Settings/Panel/VBoxContainer/ScrollContainer/ColorButtons/Spin/CheckBox" to="HBoxContainer/Creator/ViewportContainer/Viewport/Spatial" method="_on_CheckBox_toggled"]
[connection signal="value_changed" from="Popups/Settings/Panel/VBoxContainer/ScrollContainer/ColorButtons/Spin/SpinBox" to="HBoxContainer/Creator/ViewportContainer/Viewport/Spatial" method="_on_SpinBox_value_changed"]

[editable path="Popups/WorldGenProperties"]
[editable path="Popups/LandBiomeColors"]
[editable path="Popups/OceanBiomeColors"]
[editable path="Popups/Settings"]
